--- a/bbl/i18n/nl/BambuStudio_nl.po
+++ b/bbl/i18n/nl/BambuStudio_nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-20 09:30+0800\n"
+"POT-Creation-Date: 2023-02-21 18:18+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -387,7 +387,7 @@ msgstr "Dikte"
 msgid "Input text"
 msgstr "Tekst invoeren"
 
-msgid "Embeded depth"
+msgid "Embeded"
 msgstr ""
 
 msgid "Text Gap"
@@ -396,10 +396,15 @@ msgstr ""
 msgid "Angle"
 msgstr ""
 
+msgid ""
+"Embeded\n"
+"depth"
+msgstr ""
+
 msgid "Surface"
 msgstr ""
 
-msgid "Keep horizontal"
+msgid "Horizontal"
 msgstr ""
 
 msgid "Notice"
@@ -1232,6 +1237,12 @@ msgstr "Nieuw filament in de extruder laden"
 
 msgid "Purge old filament"
 msgstr "Oud filament verwijderen"
+
+msgid "Feed new filament from external spool"
+msgstr ""
+
+msgid "Confirm whether the filament has been extruded"
+msgstr ""
 
 msgid "?"
 msgstr " ?"
@@ -2728,6 +2739,10 @@ msgstr "Terug"
 
 msgid "Paint Toolbar"
 msgstr "Kleur instellingen"
+
+#, boost-format
+msgid "Shortcut key %1%"
+msgstr ""
 
 msgid "Explosion Ratio"
 msgstr "Vergrotings ratio"
@@ -5788,6 +5803,9 @@ msgstr "Nieuwe versie van Bambu Studio"
 
 msgid "Don't remind me of this version again"
 msgstr "Herinner me niet meer aan deze versie."
+
+msgid "Done"
+msgstr ""
 
 msgid "LAN Connection Failed (Sending print file)"
 msgstr "LAN-verbinding mislukt (verzenden afdrukbestand)"
