--- a/bbl/i18n/es/BambuStudio_es.po
+++ b/bbl/i18n/es/BambuStudio_es.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-20 09:30+0800\n"
+"POT-Creation-Date: 2023-02-21 18:18+0800\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -385,7 +385,7 @@ msgstr "Thickness"
 msgid "Input text"
 msgstr "Input text"
 
-msgid "Embeded depth"
+msgid "Embeded"
 msgstr ""
 
 msgid "Text Gap"
@@ -394,10 +394,15 @@ msgstr ""
 msgid "Angle"
 msgstr ""
 
+msgid ""
+"Embeded\n"
+"depth"
+msgstr ""
+
 msgid "Surface"
 msgstr ""
 
-msgid "Keep horizontal"
+msgid "Horizontal"
 msgstr ""
 
 msgid "Notice"
@@ -1225,6 +1230,12 @@ msgstr "Push new filament into extruder"
 
 msgid "Purge old filament"
 msgstr "Purgar el filamento viejo"
+
+msgid "Feed new filament from external spool"
+msgstr ""
+
+msgid "Confirm whether the filament has been extruded"
+msgstr ""
 
 msgid "?"
 msgstr "?"
@@ -2715,6 +2726,10 @@ msgstr "volver"
 
 msgid "Paint Toolbar"
 msgstr "Barra de herramientas de pintura"
+
+#, boost-format
+msgid "Shortcut key %1%"
+msgstr ""
 
 msgid "Explosion Ratio"
 msgstr "Ratio de Explosión"
@@ -5733,6 +5748,9 @@ msgstr "Nueva versión de Bambu Studio"
 
 msgid "Don't remind me of this version again"
 msgstr "Don't remind me about this version again."
+
+msgid "Done"
+msgstr ""
 
 msgid "LAN Connection Failed (Sending print file)"
 msgstr "LAN Connection Failed (Sending print file)"
